0.8.0 (currently working on)
- [#2724] Fix: Country list is not localized
- [#2731] Fix: plugin.tx_seminars.allowRegistrationForEventsWithoutDate is called like a switch available in flexforms but it is not in flexforms
- [#2607] Feature: Attach the CSV file to the CLI-triggered e-mails to the organizers
- [#2708] Feature: Add a FrontEndLoginManager
- [#2729] Fix: lowercase the CLI user defined in localconf
- [#2603] Feature: In the CLI module, check whether there are any events that are in the "planned" state
- [#2723] Fix: Registration crashes with fatal error if no foods are selected in the registration form
- [#2720] Change: Improve the buttons for the confirm/cancel form
- [#2722] Change: Make confirmation_information_sent and cancellation_information_sent readonly when editing seminars in the BE
- [#2601] Feature: Add a CLI command line parameter for selecting the page that contains the TS setup that will be used by the CLI module
- [#2598, #2599] Feature: After confirming/canceling an event, send the e-mail, mark the event as confirmed/canceled and redirect back into the list view
- [#2714] Fix: Undefined variable in return value of tx_seminars_mod2_EventMailForm::render()
- [#2706] Change: Make the FE editor testable
- [#2594] Feature: Use HTML for the thank-you and unregistration e-mails to the attendees
- [#2695] Change: Use the new mail class in registration::sendAdditionalNotification
- [#737] Fix: When FE-editing an existing event, don't change the crdate
- [#2705] Fix: Crash when saving an event in the FE
- [#2583] Fix: seminar::createImageForSingleView needs to initialize $imageFile before use
- [#2496] Change: Add a function for sending an e-mail to an FE user and use it from registration::notifyAttendee
- [#2495] Change: Add a function for sending an e-mail to an organizer and use it from registration::notifyOrganizers
- [#2667] Fix: Test testRenderThrowsExceptionForInvalidEventUid fails
- [#2600] Feature: Add a CLI module